<resources>
    <string name="app_name" translatable="false">Sarna</string>
    <string name="app_subtitle">Check how secure is your phone!</string>
    <string name="app_options">Options</string>
    <string name="option_root_privilege">Root methods allowed</string>
    <string name="option_educational">Educational mode</string>
    <string name="option_remote_server">Send data to server</string>
    <string name="option_report">Generate report</string>
    <string name="start_app">Start testing</string>
    <string name="wifi_title">Wifi password</string>
    <string name="wifi_description">Grant privileges to let app take password to your wifi</string>
    <string name="wifi_button">Launch</string>
    <string name="root_denied">Cannot get root privileges</string>
    <string name="unrooted_device">Your device is not rooted</string>
    <string name="external_server_warning">This feature may use mobile data</string>
    <string name="root_declined">You have not granted root privileges</string>
    <string name="report_title">Report</string>
    <string name="exit_button">Exit</string>
    <string name="metadata_title">Call metadata</string>
    <string name="metadata_description">Grant permission to let app take your calls\' metadata</string>
    <string name="metadata_button">Launch</string>
    <string name="contacts_amount">Contacts amount</string>
    <string name="call_logs_amount">Call logs amount</string>
    <string name="not_in_contacts">not saved in contacts</string>
    <string name="dirtycow_title">Dirty cow vulnerability</string>
    <string name="dirtycow_description">Check whether your phone is vulnerable</string>
    <string name="dirtycow_button">Launch</string>
    <string name="not_found">"not found"</string>
    <string name="token_title">SMS token</string>
    <string name="token_description">Grant permission to let app authenticate your phone</string>
    <string name="token_button">Launch</string>
    <string name="default_title">SMS token</string>
    <string name="default_description">Grant permission to let app authenticate your phone</string>
    <string name="default_button">Launch</string>
    <string name="token_mode_not_safe">Sms token: not safe mode</string>
    <string name="token_mode_for_dummies">Sms token: for dummies mode</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="warning">Warning</string>
    <string name="password_regexp" translatable="false">haslo:[ ]*</string>
    <string name="number_error">Please input phone number!</string>
    <string name="loading">Loading</string>
    <string name="log_condition">To generate report you need to grant log permission</string>
    <string name="contact_condition">To generate report you need to grant contact permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="log_analyze_title">Based on call logs we found out that</string>
    <string name="long_duration_contact">With who you speak long</string>
    <string name="long_duration_contact_description">With who you speak long</string>
    <string name="frequent_short_contact">With who you speak frequent, but short</string>
    <string name="frequent_short_contact_description">With who you speak frequent, but short</string>
    <string name="rare_long_contact">With who you speak rarely, but long</string>
    <string name="rare_long_contact_description">With who you speak rarely, but long</string>
    <string name="night_contact">With who you speak nights</string>
    <string name="night_contact_description">With who you speak nights</string>
    <string name="missed_contact">With who you not speak</string>
    <string name="missed_contact_description">With who you not speak</string>
    <string name="most_frequent_contact">With who you speak frequent</string>
    <string name="most_frequent_contact_description">With who you speak frequent</string>
    <string name="contacts_description" />
    <string name="contacts_not_found" />
    <string name="logs_not_found" />
    <string name="next_button">Skip</string>
    <string name="method_not_launched">Method not launched</string>
    <string name="reason">Reason:</string>
    <string name="default_app_kitkat">Up to Kitkat no possibility</string>
    <string name="method_skipped">Method skipped</string>
    <string name="test_method_worked">Test method worked</string>
    <string name="test_method_failed">Test method falied</string>
    <string name="permission_list">Permission statuses</string>
    <string name="cloak_title" translatable="false">Cloak and Dagger</string>
    <string name="cloak_description">Cloak and Dagger description</string>
    <string name="cloak_report">...</string>
    <string name="report_dirtycow">...</string>
    <string name="method_tested">...</string>
    <string name="method_ok">...</string>
    <string name="method_failed">...</string>
    <string name="click_cash">Kliknij przycisk i spróbuj wykonać przelew.</string>
    <string name="activation_code">Activation code:</string>
    <string name="cloakCapturedDataDescription">The captured data will appear here</string>
    <string name="cloak_name" translatable="false"><![CDATA[Cloak & Dagger]]></string>
    <string name="cloakNextButton">Next</string>


</resources>
